# django-rest

./: Pipfile  README.md  pyproject.toml
djangoProject/djangoProject/: settings.py  urls.py
djangoProject/djangoProject/templates/: layout.html
djangoProject/homeapp/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
djangoProject/homeapp/migrations/: 0001_initial.py  0002_auto_20211111_1424.py  0003_auto_20211111_1601.py  0004_alter_siteupdatenews_date.py  0005_alter_siteupdatenews_date.py  0006_alter_siteupdatenews_date.py  0007_auto_20211209_1316.py
djangoProject/homeapp/templates/home/: index.html  oauth.html
djangoProject/homeapp/tests/: test_api.py  test_serializers.py
