[tool.poetry]
name = "django-rest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.2.10"
python-dotenv = "*"
djangorestframework = "*"
pytest = "*"
markdown = "*"
django-filter = "*"
coverage = "*"
django-rest-framework-social-oauth2 = "*"
social-auth-app-django = "*"
django-debug-toolbar = "*"
django-debug-toolbar-force = "*"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
